--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ nav div {
     cursor: pointer;
 }
 
-.projects{
+.projects {
     position: relative;
     top: 200px;
 }
@@ -66,19 +66,40 @@ nav div {
     height: 420px;
     border-radius: 15px;
     opacity: 1;
-    top: 100px;
+    top: 20px;
     display: inline-block;
+    overflow: hidden;
+    top: 120px;
 }
 
 
 #first {
     background: transparent url('../img/1.png') 0% 0% no-repeat padding-box;
 }
+
 #second {
     top: 0px;
 
     background: transparent url('../img/2.png') 0% 0% no-repeat padding-box;
 }
+
 #third {
     background: transparent url('../img/3.png') 0% 0% no-repeat padding-box;
+}
+
+.innerdiv {
+    width: 100%;
+    height: 65px;
+    /* UI Properties */
+    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) var(--unnamed-font-size-18)/var(--unnamed-line-spacing-22) var(--unnamed-font-family-helvetica-neue);
+    letter-spacing: var(--unnamed-character-spacing-0);
+    color: var(--unnamed-color-171717);
+    text-align: left;
+    font: normal normal normal 18px/22px Helvetica Neue;
+    letter-spacing: 0px;
+    color: #171717;
+    text-transform: uppercase;
+    opacity: 1;
+    position: relative;
+    bottom: 0px;
 }
